adicionei a função pathParser

--- a/terminal site/recrutamento.html
+++ b/terminal site/recrutamento.html
@@ -19,7 +19,7 @@
 <div id="terminal"></div>
 <canvas id="chatCanvas"></canvas>
 
-<script src="scriptteste.js"></script>
+<script src="scriptsite.js"></script>
 
 </body>
 </html>
