Criei classes, organizei código e limpei repositório (acho)

--- a/terminal site/index.html
+++ b/terminal site/index.html
@@ -19,7 +19,10 @@
 <div id="terminal"></div>
 <canvas id="chatCanvas"></canvas>
 
-<script src="scriptteste.js"></script>
+<script src="./../File.js"></script>
+<script src="fileDefinitions.js"></script>
+<script src="./../CommonFunctions.js"></script>
+<script src="scriptSite.js"></script>
 
 </body>
 </html>
