--- a/terminal-super-secreto/index.html
+++ b/terminal-super-secreto/index.html
@@ -19,7 +19,11 @@
 <div id="terminal"></div>
 <canvas id="chatCanvas"></canvas>
 
-<script src="scriptsite.js"></script>
+
+<script src="./../File.js"></script>
+<script src="fileDefinitions.js"></script>
+<script src="./../CommonFunctions.js"></script>
+<script src="scriptRecrutamento.js"></script>
 
 </body>
 </html>
