--- a/terminal site/index.html
+++ b/terminal site/index.html
@@ -19,10 +19,16 @@
 <div id="terminal"></div>
 <canvas id="chatCanvas"></canvas>
 
-<script src="./../File.js"></script>
+<script src="./../FileTypes/CustomFile.js"></script>
+<script src="./../FileTypes/PrjFile.js"></script>
+<script src="./../FileTypes/EvntFile.js"></script>
+<script src="./../FileTypes/HsFile.js"></script>
+<script src="./../FileTypes/TxtFile.js"></script>
 <script src="fileDefinitions.js"></script>
 <script src="./../CommonFunctions.js"></script>
 <script src="scriptSite.js"></script>
 
 </body>
 </html>
+
+
