--- a/terminal-super-secreto/index.html
+++ b/terminal-super-secreto/index.html
@@ -20,7 +20,11 @@
 <canvas id="chatCanvas"></canvas>
 
 
-<script src="./../File.js"></script>
+<script src="./../FileTypes/CustomFile.js"></script>
+<script src="./../FileTypes/PrjFile.js"></script>
+<script src="./../FileTypes/EvntFile.js"></script>
+<script src="./../FileTypes/HsFile.js"></script>
+<script src="./../FileTypes/TxtFile.js"></script>
 <script src="fileDefinitions.js"></script>
 <script src="./../CommonFunctions.js"></script>
 <script src="scriptRecrutamento.js"></script>
