--- a/terminal site/index.html
+++ b/terminal site/index.html
@@ -25,6 +25,8 @@
 <script src="./../FileTypes/HsFile.js"></script>
 <script src="./../FileTypes/TxtFile.js"></script>
 <script src="fileDefinitions.js"></script>
+<script src="./../FileSystem.js"></script>
+<script src="./../ParseInput.js"></script>
 <script src="./../CommonFunctions.js"></script>
 <script src="scriptSite.js"></script>
 
