--- a/terminal-super-secreto/index.html
+++ b/terminal-super-secreto/index.html
@@ -26,6 +26,8 @@
 <script src="./../FileTypes/HsFile.js"></script>
 <script src="./../FileTypes/TxtFile.js"></script>
 <script src="fileDefinitions.js"></script>
+<script src="./../FileSystem.js"></script>
+<script src="./../ParseInput.js"></script>
 <script src="./../CommonFunctions.js"></script>
 <script src="scriptRecrutamento.js"></script>
 
